--- a/index.html
+++ b/index.html
@@ -40,16 +40,12 @@
                                         <a href="index.html">Home</a>
                                     </li>
                                     <li>
-                                        <a href="products.html">Services</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" data-uk-icon="icon: fa-sort-down; ratio: 0.023">Company</a>
+                                        <a href="#" data-uk-icon="icon: fa-sort-down; ratio: 0.023">Services</a>
                                         <div class="uk-navbar-dropdown">
                                             <ul class="uk-nav uk-navbar-dropdown-nav">
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="careers.html">Careers</a></li>
-                                                <li><a href="contact.html">Contact</a></li>
+                                                <li><a href="error-404.html">Historical Restoration</a></li>
+                                                <li><a href="error-404.html">Custom Windows, Doors & Shutters</a></li>
+                                                <li><a href="error-404.html">Commercial Construction</a></li>
                                             </ul>
                                         </div>
                                     </li>
