--- a/index.html
+++ b/index.html
@@ -49,30 +49,6 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>
-                                        <a href="pricing.html">Pricing</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" data-uk-icon="icon: fa-sort-down; ratio: 0.023">Resources</a>
-                                        <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
-                                            <div class="uk-navbar-dropdown-grid uk-child-width-1-2" data-uk-grid>
-                                                <div>
-                                                    <ul class="uk-nav uk-navbar-dropdown-nav">
-                                                        <li><a href="https://getuikit.com/docs/">Documentation<span data-uk-icon="icon:fa-external-link-alt; ratio: 0.024"></span></a></li>
-                                                        <li><a href="#">Help Center</a></li>
-                                                        <li><a href="customers.html">Customers</a></li>
-                                                        <li><a href="roadmap.html">Roadmap</a></li>
-                                                        <li><a href="#">White Paper<span data-uk-icon="icon:fa-file-pdf; ratio: 0.024"></span></a></li>
-                                                    </ul>
-                                                </div>
-                                                <div>
-                                                    <ul class="uk-nav uk-navbar-dropdown-nav">
-                                                        <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
                                 </ul>
                             </div>
                         </nav>
@@ -210,7 +186,7 @@
                 <!-- grid content begin -->
                 <div class="uk-child-width-1-1 uk-child-width-1-3@m" data-uk-grid>
                     <div>
-                        <h3>Greetings from Me</h3>
+                        <h3>Greetings from Arek</h3>
                         <p>Adipiscing elit do eiusmod tempor incididunt explicabo nemo enim ipsam voluptatem.</p>
                         <p>Excepteur sint occaecat cupidatat proident sunt in culpa qui officia deserunt mollit anim id est laborum architecto beatae vitae dicta eno sunt nostrum exercitationem.</p>
                         <img src="img/vulcan-content-signature.png" data-src="img/vulcan-content-signature.png" alt="signature" width="184" height="25" data-uk-img>
@@ -223,7 +199,7 @@
                                     <div class="in-testimoni-slider">
                                         <blockquote cite="#">
                                             <div class="in-testimoni-card">
-                                                <p>Really love the product! It saves so much time and helps a lot in organizing our feedback. Awesome idea and huge potential.</p>
+                                                <p>Blah Blah Blah.</p>
                                             </div>
                                             <footer>
                                                 <div class="uk-grid-small" data-uk-grid>
@@ -231,8 +207,8 @@
                                                         <img src="img/in-testi-sample1.png" data-src="img/in-testi-sample1.png" width="45" height="45" alt="logo" data-uk-img>
                                                     </div>
                                                     <div class="uk-width-expand">
-                                                        <h5>Kate Zalewska</h5>
-                                                        <cite>Product Owner at Ansible</cite>
+                                                        <h5>Joe Doe</h5>
+                                                        <cite>Home Owner</cite>
                                                     </div>
                                                 </div>                        
                                             </footer>
@@ -243,7 +219,7 @@
                                     <div class="in-testimoni-slider">
                                         <blockquote cite="#">
                                             <div class="in-testimoni-card">
-                                                <p>Quick, easy, and super helpful to collect and organise feedback from all kinds of channels we use to communicate with our customers.</p>
+                                                <p>Blah Blah Blah..</p>
                                             </div>
                                             <footer>
                                                 <div class="uk-grid-small" data-uk-grid>
@@ -251,8 +227,8 @@
                                                         <img src="img/in-testi-sample2.png" data-src="img/in-testi-sample2.png" width="45" height="45" alt="logo" data-uk-img>
                                                     </div>
                                                     <div class="uk-width-expand">
-                                                        <h5>Nina van Adrichem</h5>
-                                                        <cite>Designer at GWT</cite>
+                                                        <h5>Jane Doe</h5>
+                                                        <cite>Business Owner</cite>
                                                     </div>
                                                 </div>                        
                                             </footer>
@@ -263,7 +239,7 @@
                                     <div class="in-testimoni-slider">
                                         <blockquote cite="#">
                                             <div class="in-testimoni-card">
-                                                <p>The extension makes collecting feedback so much easier! Shipright then really helps us make decisions based on the data we collected.</p>
+                                                <p>Blah Blah Blah.</p>
                                             </div>
                                             <footer>
                                                 <div class="uk-grid-small" data-uk-grid>
@@ -271,8 +247,8 @@
                                                         <img src="img/in-testi-sample3.png" data-src="img/in-testi-sample3.png" width="45" height="45" alt="logo" data-uk-img>
                                                     </div>
                                                     <div class="uk-width-expand">
-                                                        <h5>Marcel Wundrich</h5>
-                                                        <cite>Public Relations at Semaphore</cite>
+                                                        <h5>John Doe</h5>
+                                                        <cite>Business Owner</cite>
                                                     </div>
                                                 </div>                        
                                             </footer>
@@ -340,14 +316,6 @@
                         <p>930 New York Avenue<br>Trenton, NJ, United States</p>
                         <span class="uk-label uk-margin-small-right in-margin-bottom@s"><span class="uk-margin-small-right" data-uk-icon="icon:fa-phone; ratio: .024"></span>609-393-6150</span>
                         <span class="uk-label in-margin-bottom@s"><span class="uk-margin-small-right" data-uk-icon="icon:fa-envelope; ratio: .024"></span>Contact@delltechinc.com</span>
-                    </div>
-                    <div>
-                        <h3>Latest News</h3>
-                        <ul class="uk-list uk-list-divider uk-link-text">
-                            <li><a href="#">UBS rogue trader: 'It could happen again'<span class="uk-float-right uk-visible@m">August 2, 2019</span></a></li>
-                            <li><a href="#">Amazon boss Bezos becomes world's third richest<span class="uk-float-right uk-visible@m">July 22, 2019</span></a></li>
-                            <li><a href="#">Australia cuts interest rates to historic low<span class="uk-float-right uk-visible@m">July 15, 2019</span></a></li>
-                        </ul>
                     </div>
                     <div class="uk-width-1-1">
                         <hr class="uk-margin-top uk-margin-medium-bottom">
