--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#468efc"/> 
     <!-- Site Properties -->    
-    <title>404 error - Minerva HTML5 Template</title>
+    <title>404 error</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png">
     <!-- Google Fonts -->
@@ -26,11 +26,11 @@
                         <!-- header logo begin -->
                         <div class="uk-grid-collapse in-header-logo" data-uk-grid>
                             <div>
-                                <img src="img/logo.svg" data-src="img/logo.svg" width="25" height="36" alt="logo" data-uk-img>
+                                <img src="img/text logo.png" data-src="img/text logo.png" width="25" height="36" alt="logo" data-uk-img>
                             </div>
                             <div>        
-                                <h1><a class="uk-logo" href="index.html">Vulcan</a></h1>
-                                <p class="uk-text-small">power of business</p>
+                                <h1><a class="uk-logo" href="index.html">Dell-TechInc</a></h1>
+                                <p class="uk-text-small"></p>
                             </div>
                         </div>
                         <!-- header logo end -->
@@ -44,45 +44,16 @@
                                         <a href="index.html">Home</a>
                                     </li>
                                     <li>
-                                        <a href="products.html">Products</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" data-uk-icon="icon: fa-sort-down; ratio: 0.023">Company</a>
+                                        <a href="#" data-uk-icon="icon: fa-sort-down; ratio: 0.023">Services</a>
                                         <div class="uk-navbar-dropdown">
                                             <ul class="uk-nav uk-navbar-dropdown-nav">
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="careers.html">Careers</a></li>
-                                                <li><a href="contact.html">Contact</a></li>
+                                                <li><a href="404.html">Historical Restoration</a></li>
+                                                <li><a href="404.html">Custom Windows, Doors & Shutters</a></li>
+                                                <li><a href="404.html">Commercial Construction</a></li>
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>
-                                        <a href="pricing.html">Pricing</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" data-uk-icon="icon: fa-sort-down; ratio: 0.023">Resources</a>
-                                        <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
-                                            <div class="uk-navbar-dropdown-grid uk-child-width-1-2" data-uk-grid>
-                                                <div>
-                                                    <ul class="uk-nav uk-navbar-dropdown-nav">
-                                                        <li><a href="https://getuikit.com/docs/">Documentation<span data-uk-icon="icon:fa-external-link-alt; ratio: 0.024"></span></a></li>
-                                                        <li><a href="#">Help Center</a></li>
-                                                        <li><a href="customers.html">Customers</a></li>
-                                                        <li><a href="roadmap.html">Roadmap</a></li>
-                                                        <li><a href="#">White Paper<span data-uk-icon="icon:fa-file-pdf; ratio: 0.024"></span></a></li>
-                                                    </ul>
-                                                </div>
-                                                <div>
-                                                    <ul class="uk-nav uk-navbar-dropdown-nav">
-                                                        <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
                                 </ul>
-                                <a href="signin.html" class="uk-button uk-button-small">Sign in<span class="uk-margin-small-left" data-uk-icon="icon: fa-sign-in-alt; ratio:0.023"></span></a>
                             </div>
                         </nav>
                         <!-- main navigation end -->
