--- a/404.html
+++ b/404.html
@@ -66,31 +66,22 @@
                                 <button class="uk-modal-close-full uk-close-large" type="button" data-uk-icon="icon: fa-times; ratio: 0.040"></button>
                                 <div class="uk-width-large uk-padding-large">
                                     <ul class="uk-nav-primary uk-nav-parent-icon in-margin-negative-top@s" data-uk-nav>
-                                        <li ><a href="index.html">Home</a>
+                                        <li>
+                                            <a href="index.html">Home</a>
                                         </li>
-                                        <li ><a href="products.html">Products</a>
-                                        </li>
-                                        <li class="uk-parent"><a href="#">Company</a>
-                                            <ul class="uk-nav-sub">
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="careers.html">Careers</a></li>
-                                                <li><a href="contact.html">Contact</a></li>
-                                            </ul>
+                                        <li>
+                                            <a href="#" data-uk-icon="icon: fa-sort-down; ratio: 0.023">Services</a>
+                                            <div class="uk-navbar-dropdown">
+                                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                                    <li><a href="404.html">Historical Restoration</a></li>
+                                                    <li><a href="404.html">Custom Windows, Doors & Shutters</a></li>
+                                                    <li><a href="404.html">Commercial Construction</a></li>
+                                                </ul>
+                                            </div>
                                         </li>
                                         <li ><a href="pricing.html">Pricing</a>
                                         </li>
-                                        <li class="uk-parent"><a href="#">Resources</a>
-                                            <ul class="uk-nav-sub">
-                                                <li><a href="https://getuikit.com/docs/">Documentation<span data-uk-icon="icon:fa-external-link-alt; ratio: 0.024"></span></a></li>
-                                                <li><a href="#">Help Center</a></li>
-                                                <li><a href="customers.html">Customers</a></li>
-                                                <li><a href="roadmap.html">Roadmap</a></li>
-                                                <li><a href="#">White Paper<span data-uk-icon="icon:fa-file-pdf; ratio: 0.024"></span></a></li>
-                                            </ul>
-                                        </li>
                                     </ul>
-                                    <a href="signin.html" class="uk-button uk-button-primary uk-border-rounded uk-align-center">Sign in</a>
                                 </div>
                             </div>
                         </div>
