--- a/404.html
+++ b/404.html
@@ -66,20 +66,14 @@
                                 <button class="uk-modal-close-full uk-close-large" type="button" data-uk-icon="icon: fa-times; ratio: 0.040"></button>
                                 <div class="uk-width-large uk-padding-large">
                                     <ul class="uk-nav-primary uk-nav-parent-icon in-margin-negative-top@s" data-uk-nav>
-                                        <li>
-                                            <a href="index.html">Home</a>
+                                        <li ><a href="index.html">Home</a>
                                         </li>
-                                        <li>
-                                            <a href="#" data-uk-icon="icon: fa-sort-down; ratio: 0.023">Services</a>
-                                            <div class="uk-navbar-dropdown">
-                                                <ul class="uk-nav uk-navbar-dropdown-nav">
-                                                    <li><a href="404.html">Historical Restoration</a></li>
-                                                    <li><a href="404.html">Custom Windows, Doors & Shutters</a></li>
-                                                    <li><a href="404.html">Commercial Construction</a></li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li ><a href="pricing.html">Pricing</a>
+                                        <li class="uk-parent"><a href="#">Services</a>
+                                            <ul class="uk-nav-sub">
+                                                <li><a href="404.html">Historical Restoration</a></li>
+                                                <li><a href="404.html">Custom Windows, Doors & Shutters</a></li>
+                                                <li><a href="404.html">Commercial Construction</a></li>
+                                            </ul>
                                         </li>
                                     </ul>
                                 </div>
